--- a/ngApp/views/pages/about.html
+++ b/ngApp/views/pages/about.html
@@ -14,3 +14,5 @@
         <p>to better serve our clientèle, all therapists at restoration bodywork are required to fulfill an additional 20% more continuing education hours than is required by the state of arizona.</p>
     </div>
 </div>
+
+<div ng-include src="'/ngApp/views/partials/footer.html'"></div>
