--- a/ngApp/views/pages/home.html
+++ b/ngApp/views/pages/home.html
@@ -9,3 +9,5 @@
     <p id="modalities">massage therapy & related bodywork modalities to assist you on your journey to restore wellness to your life</p>
     <p id="address">1640 east thomas road<br/>back building<br/>phoenix, arizona 85016</p>
 </div>
+
+<div ng-include src="'/ngApp/views/partials/footer.html'"></div>
