--- a/ngApp/views/pages/links.html
+++ b/ngApp/views/pages/links.html
@@ -18,3 +18,5 @@
         <p><a href="http://swnutra.com" target="_blank" rel="nofollow">Visit Site</a>
     </div>
 </div>
+
+<div ng-include src="'/ngApp/views/partials/footer.html'"></div>
