--- a/ngApp/views/pages/not-found.html
+++ b/ngApp/views/pages/not-found.html
@@ -10,3 +10,5 @@
         <p>We're sorry, but the page you looking for could not be found.</p>
     </div>
 </div>
+
+<div ng-include src="'/ngApp/views/partials/footer.html'"></div>
