--- a/ngApp/views/pages/policies.html
+++ b/ngApp/views/pages/policies.html
@@ -18,3 +18,5 @@
         <p>clients may also stop a session in the first 10 minutes if the quality of the ssession is not meeting their expectations. we ask that you communicate your needs to the therapist and see if they can adjust their work. if the adjustment is not satisfactory, please feel comfortable in asking for the session to be terminated.</p>
     </div>
 </div>
+
+<div ng-include src="'/ngApp/views/partials/footer.html'"></div>
