--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,28 +71,6 @@
 
         <ui-view></ui-view>
 
-        </div>
-    </div>
-
-    <div class="row" id="footer-links">
-        <div class="col-sm-12">
-            <a href="/">home</a> | <a href="/about">about</a> | <a href="/therapeutic-benefits">therapeutic benefits</a> | <a href="/contraindications">contraindications</a> | <a href="/modalities">modalities</a> |
-            <a href="/first-time-clients">first-time clients</a> | <a href="/policies">policies</a> | <a href="/location">location</a> | <a href="/links">links</a> | <a href="/rates">rates</a> | <a href="/contact">contact us</a> | <a href="/register">register</a> | <a href="/login">login</a><br/>
-
-            &copy 2017 all materials, restoration bodywork and massage therapy | design and development by <a href="http://www.piscean.com">piscean digital</a><br /><br />
-
-            <a target="_blank" title="Restoration Bodywork BBB Business Review" href="http://www.bbb.org/phoenix/business-reviews/massage-therapists/restoration-bodywork-in-phoenix-az-1000035842/#bbbonlineclick"><img alt="Restoration Bodywork BBB Business Review" style="border: 0;" src="http://seal-central-northern-western-arizona.bbb.org/seals/black-seal-120-61-restoration-bodywork-1000035842.png" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-            <a href="https://www.thumbtack.com/az/phoenix/licensed-massage-therapists/" id="thumbtack-medallion" target="_blank"><img src="https://static.thumbtack.com/media/widgets/featured-pro.png" alt="Thumbtack Best Pro of 2015"></a><script src="https://static.thumbtack.com/media/widgets/medallion-links.js"></script>
-
-            <a href="https://www.expertise.com/az/phoenix/massage-therapy" style="border:0;"><img style="width:140px;padding-left: 20px;" src="https://cdn.expertise.com/awards/az_phoenix_massage-therapy_2016.svg" alt="Best Massage Therapists in Phoenix" /></a>
-
-
-        </div>
-    </div>
-</div>
-
-
 <script src="/bower_components/angular/angular.min.js"></script>
 <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
@@ -106,6 +84,7 @@
 <script src="node_modules/angular-ckeditor/angular-ckeditor.min.js"></script>
 
 <script src="/ngApp/app.js"></script>
+<script src="/ngApp/controllers/base-controller.js"></script>
 <script src="/ngApp/controllers/home.js"></script>
 <script src="/ngApp/controllers/about.js"></script>
 <script src="/ngApp/controllers/therapeutic-benefits.js"></script>
