--- a/ngApp/css/styles.css
+++ b/ngApp/css/styles.css
@@ -96,7 +96,7 @@ h1 {
 	color: #6E173A;
 }
 
-h2 {
+h2, h3 {
 	font-family: 'SofiaProSemiBold', Arial, Helvetica;
 	font-size: 20px;
 	color: #6E173A;
