--- a/ngApp/views/auth/dashboard.html
+++ b/ngApp/views/auth/dashboard.html
@@ -8,7 +8,7 @@
                 <h3 class="panel-title">dashboard</h3>
             </div>
             <div class="panel-body">
-                <div id="scroll">
+                <div id="scroll" style="height: 500px;">
                     <a href="/post/add" class="btn btn-primary pull-right">Add Post</a>
                     <a href="/tag/add" class="btn btn-primary pull-right">Add Tag</a><br /><br/>
 
