--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,6 +96,7 @@
 <script src="/ngApp/controllers/links.js"></script>
 <script src="/ngApp/controllers/rates.js"></script>
 <script src="/ngApp/controllers/blog.js"></script>
+<script src="/ngApp/controllers/post.js"></script>
 <script src="/ngApp/controllers/tag.js"></script>
 <script src="/ngApp/controllers/contact.js"></script>
 <script src="/ngApp/controllers/login.js"></script>
