--- a/ngApp/views/pages/post.html
+++ b/ngApp/views/pages/post.html
@@ -7,8 +7,14 @@
 <div class="col-lg-6 col-md-6 col-xs-12 right-col">
     <h1>blog</h1>
     <div id="copy">
-        <h3>{{ vm.post.title }}</h3>
-        <div ng-bind-html="vm.post.body"></div>
+        <div ng-if="vm.post">
+            <h3>{{ vm.post.title }}</h3>
+            <div ng-bind-html="vm.post.body"></div>
+        </div>
+        <div ng-if="!vm.post">
+            <p>Post not found.</p>
+        </div>
+
     </div>
 </div>
 
