--- a/ngApp/views/pages/tag.html
+++ b/ngApp/views/pages/tag.html
@@ -5,7 +5,8 @@
     <img src="/images/centerpieces/about.jpg" />
 </div>
 <div class="col-lg-6 col-md-6 col-xs-12 right-col">
-    <h1>{{ vm.tag.name }}</h1>
+    <h1>blog</h1>
+    <h2>{{ vm.tag.name }}</h2>
     <div id="copy">
 
         <div ng-if="vm.posts">
@@ -13,6 +14,9 @@
                 <h3>{{ post.title }}</h3>
                 <div ng-bind-html="post.body"></div>
             </div>
+        </div>
+        <div ng-if="!vm.posts">
+            <p>Posts not found.</p>
         </div>
 
     </div>
