--- a/ngApp/views/pages/post.html
+++ b/ngApp/views/pages/post.html
@@ -1,20 +1,20 @@
 <div class="col-md-3 col-xs-12 hidden-md hidden-lg image-slice">
-    <img src="/images/centerpieces/about.jpg" />
+    <img src="/images/centerpieces/flames.jpg" />
 </div>
 <div class="col-lg-3 col-md-3 col-xs-12 hidden-sm hidden-xs center-col">
-    <img src="/images/centerpieces/about.jpg" />
+    <img src="/images/centerpieces/flames.jpg" />
 </div>
 <div class="col-lg-6 col-md-6 col-xs-12 right-col">
     <h1>blog</h1>
     <div id="copy">
-        <div ng-if="vm.post">
+        <div ng-if="vm.post" id="scroll">
             <h3>{{ vm.post.title }}</h3>
             <div ng-bind-html="vm.post.body"></div>
         </div>
         <div ng-if="!vm.post">
-            <p>Post not found.</p>
+            <h3>post not found</h3>
+            <p>we're sorry, but we could not find the post for which you are looking.</p>
         </div>
-
     </div>
 </div>
 
