--- a/ngApp/views/auth/dashboard.html
+++ b/ngApp/views/auth/dashboard.html
@@ -27,6 +27,9 @@
                                 <td>{{ post.title }}</td>
                             </tr>
                         </table>
+                        <div ng-if="!vm.posts.length">
+                            <p>there are no posts yet.</p>
+                        </div>
                     </div>
 
                     <h3>tags</h3>
@@ -39,11 +42,14 @@
                             <tr ng-repeat="tag in vm.tags">
                                 <td>
                                     <a href="/tag/edit/{{ tag._id}}">edit</a> |
-                                    <a href="#" ng-click="vm.remove(tag._id)">delete</a>
+                                    <a href="#" ng-click="vm.delete(tag._id)">delete</a>
                                 </td>
                                 <td>{{ tag.name }}</td>
                             </tr>
                         </table>
+                        <div ng-if="!vm.tags.length">
+                            <p>there are no tags yet.</p>
+                        </div>
                     </div>
                 </div>
             </div>
