--- a/ngApp/views/pages/contact.html
+++ b/ngApp/views/pages/contact.html
@@ -9,10 +9,14 @@
     <div id="copy">
         <p>We would like to hear from you.  You can reach our staff by calling 602-695-0809 or using the contact form below.  We will get back to you promptly and schedule you for a massage at the earliest possible time.  Thank you for choosing us.</p>
 
-        <form method="POST" ng-submit="vm.sendEmail()">
+        <form name="contact" novalidate method="POST" ng-submit="vm.sendEmail()">
 
             <div class="form-group">
-                <label for="name">Name:</label>  <input class="form-control" name="name" type="text" id="name" ng-model="vm.message.name">
+                <label for="name">Name:</label>
+                <input class="form-control" name="name" type="text" id="name" ng-model="vm.message.name" ng-required="true">
+                <span ng-show="contact.name.$touched && contact.name.$error.required" class="error">
+                    A name is required.
+                </span>
             </div>
 
             <div class="form-group">
@@ -20,14 +24,22 @@
             </div>
 
             <div class="form-group">
-                <label for="email">Email:</label> <input class="form-control" name="email" type="text" id="email" ng-model="vm.message.email">
+                <label for="email">Email:</label>
+                <input class="form-control" name="email" type="text" id="email" ng-model="vm.message.email" ng-required="true">
+                <span ng-show="contact.email.$touched && contact.email.$error.required" class="error">
+                    An email address is required.
+                </span>
             </div>
 
             <div class="form-group">
-                <label for="message">Message:</label> <textarea class="form-control" rows="5" name="message" cols="50" id="message" ng-model="vm.message.body"></textarea>
+                <label for="message">Message:</label>
+                <textarea class="form-control" rows="5" name="message" cols="50" id="message" ng-model="vm.message.body" ng-required="true"></textarea>
+                <span ng-show="contact.message.$touched && contact.message.$error.required" class="error">
+                    A message body is required.
+                </span>
             </div>
 
-            <button type="submit" class="btn btn-primary pull-right">send email</button>
+            <button type="submit" class="btn btn-primary pull-right" ng-disabled="contact.$invalid">send email</button>
 
         </form>
     </div>
