--- a/ngApp/views/partials/footer.html
+++ b/ngApp/views/partials/footer.html
@@ -9,7 +9,7 @@
         <span ng-if="!vm.isLoggedIn"><a href="/register">register</a> | <a href="/login">login</a><br/></span>
         <span ng-if="vm.isLoggedIn"><a href="/dashboard">dashboard</a><br/></span>
 
-        &copy 2017 all materials, restoration bodywork and massage therapy | design and development by <a href="http://www.piscean.com">piscean digital</a><br /><br />
+        &copy 2017 all materials, restoration bodywork and massage therapy | design and development by <a href="http://www.copperstardigital.com" target="_blank">copper star digital</a><br /><br />
 
         <a target="_blank" title="Restoration Bodywork BBB Business Review" href="http://www.bbb.org/phoenix/business-reviews/massage-therapists/restoration-bodywork-in-phoenix-az-1000035842/#bbbonlineclick"><img alt="Restoration Bodywork BBB Business Review" style="border: 0;" src="http://seal-central-northern-western-arizona.bbb.org/seals/black-seal-120-61-restoration-bodywork-1000035842.png" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
