--- a/ngApp/views/auth/login.html
+++ b/ngApp/views/auth/login.html
@@ -6,18 +6,24 @@
                 <h3 class="panel-title">login</h3>
             </div>
             <div class="panel-body">
-                <form ng-submit="vm.login(vm.email, vm.password)">
+                <form name="signin" novalidate ng-submit="vm.login(vm.email, vm.password)">
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label for="email">email address</label>
-                                <input type="text" id="email" class="form-control" ng-model="vm.email"/>
+                                <input type="text" id="email" class="form-control" ng-model="vm.email" ng-required="true"/>
+                                <span ng-show="signin.model.$touched && signin.model.$error.required" class="error">
+                                    An email address is required.
+                                </span>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label for="password">password</label>
-                                <input type="password" id="password" class="form-control" ng-model="vm.password"/>
+                                <input type="password" id="password" class="form-control" ng-model="vm.password" ng-required="true"/>
+                                <span ng-show="signin.model.$touched && signin.model.$error.required" class="error">
+                                    A password is required.
+                                </span>
                             </div>
                             <button type="submit" class="btn btn-primary pull-right">login</button>
                         </div>
