--- a/ngApp/views/blog/edit.html
+++ b/ngApp/views/blog/edit.html
@@ -6,20 +6,23 @@
                 <h3 class="panel-title">edit post</h3>
             </div>
             <div class="panel-body">
-                <form ng-submit="vm.editPost()">
+                <form name="edit" novalidate ng-submit="vm.editPost()">
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label for="title">title</label>
-                                <input type="text" id="title" class="form-control" ng-model="vm.post.title" />
+                                <input type="text" id="title" name="title" class="form-control" ng-model="vm.post.title" ng-required="true"/>
+                                <span ng-show="edit.title.$touched && edit.title.$error.required" class="error">
+                                    A title is required.
+                                </span>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label>post</label>
-                                <div ckeditor="options" ng-model="vm.post.body" ready="onReady()"></div>
+                                <div ckeditor="options" name="body" ng-model="vm.post.body" ready="onReady()"></div>
                             </div>
-                            <button type="submit" class="btn btn-primary pull-right">edit post</button>
+                            <button type="submit" class="btn btn-primary pull-right" ng-disabled="edit.$invalid">edit post</button>
                         </div>
                     </div>
                 </form>
